--- a/index.html
+++ b/index.html
@@ -65,19 +65,10 @@
                         <strong class="warning">Внимание!</strong>
                         <ul class="border-warning">
                             <li>
-                              06.10(вторник) контрольная по физике
+                              16.10(пятница) тем. контроль по ист.бел.
                             </li>
                             <li>
-                                06.10(вторник) контрольная по геометр.
-                            </li>
-                            <li>
-                                07.10(среда) контрольная по алгебре
-                            </li>
-                            <li>
-                                07.10(среда) терминологический диктант(по таблице)
-                            </li>
-                            <li>
-                                08.10(четверг) 1 уроком можно перепис. ист.бел.
+                              16.10(пятница) термин. диктант по географ.
                             </li>
                         </ul>
                     </li>
@@ -85,24 +76,24 @@
             </div>
 </div>
 <!--   &sect; -->
-<h2 id="timetable">Расписание на 05-09 октября</h2>
+<h2 id="timetable">Расписание на 12-16 октября</h2>
 <div class="timetable-day">
     <h3 id="timetable-monday">понедельник</h3>
     <div class="row">
         <div class="timetable-cell">биология</div>
-        <div class="timetable-cell">&sect;4-7 сам.работа</div>
+        <div class="timetable-cell">&sect;8</div>
     </div>
     <div class="row">
         <div class="timetable-cell">алгебра</div>
-        <div class="timetable-cell">№1.196-1.197</div>
+        <div class="timetable-cell">№2.25(а,г), 2.26, 2.34</div>
     </div>
     <div class="row">
         <div class="timetable-cell">англ.яз.</div>
-        <div class="timetable-cell">с.31 упр.5 (b)<br>{группа Нтальи Петровны}</div>
+        <div class="timetable-cell">с.23 упр.2,3 (р.т.)<br>{группа Нтальи Петровны}</div>
     </div>
     <div class="row">
         <div class="timetable-cell">бел.мова</div>
-        <div class="timetable-cell">&sect;10-11 (правила) упр.61, 64</div>
+        <div class="timetable-cell">&sect;12 упр.70</div>
     </div>
     <div class="row">
         <div class="timetable-cell">Ч З С</div>
@@ -110,35 +101,35 @@
     </div>
     <div class="row">
         <div class="timetable-cell">всем.ист.</div>
-        <div class="timetable-cell">&sect;4</div>
+        <div class="timetable-cell">&sect;5</div>
     </div>
 </div>
 
 <div class="timetable-day">
     <h3 id="timetable-tuesday">вторник</h3>
     <div class="row">
-        <div class="timetable-cell">информ.</div>
+        <div class="timetable-cell">физика</div>
         <div class="timetable-cell"></div>
     </div>
     <div class="row">
-        <div class="timetable-cell">физика</div>
-        <div class="timetable-cell">повт. параграфы (подг. к контрольной)</div>
+        <div class="timetable-cell">англ.яз.</div>
+        <div class="timetable-cell"><br>{группа Натальи Петровны}</div>
     </div>
     <div class="row">
-        <div class="timetable-cell">англ.яз.</div>
-        <div class="timetable-cell">с.25 упр.3 (рабочая тетр.)<br>{группа Натальи Петровны}</div>
+        <div class="timetable-cell">физ-ра</div>
+        <div class="timetable-cell"></div>
     </div>
     <div class="row">
         <div class="timetable-cell">русск.яз.</div>
-        <div class="timetable-cell">&sect;5 упр.41, подг. к контрольной</div>
+        <div class="timetable-cell"></div>
     </div>
     <div class="row">
         <div class="timetable-cell">геометрия</div>
-        <div class="timetable-cell">№17, 48 с.36 №3</div>
+        <div class="timetable-cell"></div>
     </div>
     <div class="row">
         <div class="timetable-cell">русск.лит.</div>
-        <div class="timetable-cell">с.61-101 чит.</div>
+        <div class="timetable-cell"></div>
     </div>
 </div>
 
@@ -146,7 +137,7 @@
     <h3 id="timetable-wednesday">среда</h3>
     <div class="row">
         <div class="timetable-cell">алгебра</div>
-        <div class="timetable-cell">с.42 №3-5</div>
+        <div class="timetable-cell"></div>
     </div>
     <div class="row">
         <div class="timetable-cell">биолог.</div>
@@ -154,11 +145,11 @@
     </div>
     <div class="row">
         <div class="timetable-cell">химия</div>
-        <div class="timetable-cell">&sect;5 выучить табл.(цифры не учить) №2, 4, 6 (письменно)</div>
+        <div class="timetable-cell"></div>
     </div>
     <div class="row">
         <div class="timetable-cell">бел.мова</div>
-        <div class="timetable-cell">&sect;11 упр.65</div>
+        <div class="timetable-cell"></div>
     </div>
     <div class="row">
         <div class="timetable-cell">физ-ра</div>
@@ -166,7 +157,7 @@
     </div>
     <div class="row">
         <div class="timetable-cell">бел.лит</div>
-        <div class="timetable-cell">выуч. 1 часть ("Курган"), вопр.13,17 (устно) </div>
+        <div class="timetable-cell"></div>
     </div>
 </div>
 
@@ -209,7 +200,7 @@
         <div class="timetable-cell"></div>
     </div>
     <div class="row">
-        <div class="timetable-cell">физ-ра</div>
+        <div class="timetable-cell">информ.</div>
         <div class="timetable-cell"></div>
     </div>
     <div class="row">
@@ -218,11 +209,11 @@
     </div>
     <div class="row">
         <div class="timetable-cell">ист.бел.</div>
-        <div class="timetable-cell">&sect;5</div>
+        <div class="timetable-cell">&sect;1-6 тем. контроль</div>
     </div>
     <div class="row">
         <div class="timetable-cell">географ.</div>
-        <div class="timetable-cell">&sect;4, принести атлас и тетр. (для контрольных)</div>
+        <div class="timetable-cell">&sect;4-5 термин. диктант</div>
     </div>
 </div>
 <h2 id="grades">Оценки</h2>
@@ -239,7 +230,7 @@
     </div>
     <div class="row">
         <div class="cell">Атливанова</div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -281,9 +272,9 @@
         <div class="cell">Гребенёк</div>
         <div class="cell"></div>
         <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell">10</div>
-        <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">6</div>
         <div class="cell"></div>
 
     </div>
@@ -291,7 +282,7 @@
         <div class="cell">Демидович</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">5</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -322,7 +313,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">9</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -331,9 +322,9 @@
         <div class="cell">Исаенко</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">10</div>
         <div class="cell"></div>
         <div class="cell"></div>
+        <div class="cell">5</div>
         <div class="cell"></div>
 
     </div>
@@ -341,7 +332,7 @@
         <div class="cell">Ильюшенко</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">9</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -351,7 +342,7 @@
         <div class="cell">Кашанский</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">8</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -372,9 +363,9 @@
         <div class="cell">Кобец</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">9</div>
         <div class="cell"></div>
-        <div class="cell">9</div>
+        <div class="cell"></div>
+        <div class="cell"></div>
         <div class="cell"></div>
 
     </div>
@@ -403,18 +394,18 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">8</div>
         <div class="cell"></div>
+        <div class="cell">2</div>
         <div class="cell"></div>
 
     </div>
     <div class="row">
         <div class="cell">Месник</div>
         <div class="cell"></div>
+        <div class="cell">9</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">8</div>
         <div class="cell"></div>
 
     </div>
@@ -433,7 +424,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -441,7 +432,7 @@
     <div class="row">
         <div class="cell">Рабинов</div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -454,7 +445,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
 
     </div>
@@ -473,7 +464,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">5</div>
         <div class="cell"></div>
         <div class="cell"></div>
 
@@ -481,10 +472,10 @@
     <div class="row">
         <div class="cell">Смиренина</div>
         <div class="cell"></div>
-        <div class="cell">5</div>
-        <div class="cell">8</div>
         <div class="cell"></div>
         <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell">2</div>
         <div class="cell"></div>
 
     </div>
@@ -494,7 +485,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell"></div>
+        <div class="cell">7</div>
         <div class="cell"></div>
 
     </div>
@@ -502,7 +493,7 @@
         <div class="cell">Шубенок</div>
         <div class="cell"></div>
         <div class="cell"></div>
-        <div class="cell">10</div>
+        <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
         <div class="cell"></div>
@@ -524,9 +515,9 @@
     <h3 id="grades-tuesday">вторник</h3>
     <div class="row">
         <div class="cell"></div>
-        <div class="cell">информ.</div>
         <div class="cell">физика</div>
-        <div class="cell">англ. яз.</div>
+        <div class="cell">англ.яз.</div>
+        <div class="cell">физ-ра</div>
         <div class="cell">русск. яз.</div>
         <div class="cell">геометрия</div>
         <div class="cell">русск.лит.</div>
@@ -1403,7 +1394,7 @@
                     <div class="cell"></div>
                     <div class="cell">англ.яз.</div>
                     <div class="cell">физика</div>
-                    <div class="cell">физ-ра</div>
+                    <div class="cell">информ</div>
                     <div class="cell">алгебра</div>
                     <div class="cell">ист.бел.</div>
                     <div class="cell">географ.</div>
